menu button show and disappear event

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,7 +37,7 @@
 
 .contents {
   width: 100%;
-  height: 1000px;
+  height: 100%;
   margin: 0 0 0 140px;
 }
 
@@ -171,4 +171,90 @@
   border: 1px solid #b4b4b4;
   border-radius: 5px;
   cursor: pointer;
+}
+
+.activity-in {
+  position: fixed;
+  margin-left: 1392px;
+  width: 400px;
+  height: 100%;
+  background-color: #fafafa;
+  z-index: 1;
+  border: 1px solid #b4b4b4;
+  overflow:scroll;
+  -webkit-animation-duration: 1.5s;
+  -webkit-animation-name: slidein;
+}
+
+@-webkit-keyframes slidein {
+  from {
+      margin-left: 1800px;
+      width: 400px;
+  }
+  to {
+      margin-left: 1392px;
+      width:400px;
+  }
+}
+
+.activity-out {
+  position: fixed;
+  margin-left: 1392px;
+  width: 400px;
+  height: 100%;
+  background-color: #fafafa;
+  z-index: 1;
+  border: 1px solid #b4b4b4;
+  overflow:scroll;
+  -webkit-animation-duration: 1.5s;
+  -webkit-animation-name: slideout;
+}
+
+@-webkit-keyframes slideout {
+  from {
+    margin-left: 1392px;
+    width:400px;
+  }
+  to {
+    margin-left: 1800px;
+    width: 400px;
+
+  }
+}
+
+.activity-title {
+  padding: 12px 0 0 20px;
+  width: 100%;
+  height: 26px;
+  font-weight: 600;
+  background-color: #dee3e9;
+  border-bottom: 1px solid #cecece;
+}
+
+.activity-close {
+  margin-left: 310px;
+  cursor: pointer;
+}
+
+.activity-item {
+  width: 100%;
+  border-bottom: 1px solid #cecece;
+}
+
+.item-title {
+  margin: 20px 0 0 20px;
+  width:100%;
+  font-weight: 500;
+}
+
+.item-timelog {
+  margin: 5px 0 20px 20px;
+  width: 100%;
+  font-size: 14px;
+  color:#646464;
+}
+
+.item-bold {
+  color: #1380da;
+  font-weight: 800;
 }
