--- a/client/stylesheets/todo.sass
+++ b/client/stylesheets/todo.sass
@@ -51,6 +51,14 @@ input
     width: 20%
     text-align: center
 
+.modal-card-remove
+    background-color: #fefefe
+    margin: auto
+    padding: 20px
+    border-radius: 7px
+    width: 20%
+    text-align: center
+
 .modal-edit
     background-color: #fefefe
     margin: auto
@@ -102,7 +110,7 @@ input
     font-size: 20px
     padding: 0.7em
 
-.btn-close-modal
+.btn-close-modal, .btn-card-close
     width: 25%
     background-color: $--color-main-gray
     border-radius: 5px
@@ -110,7 +118,7 @@ input
     font-weight: 600
     padding: 0.5em
 
-.btn-accept-modal
+.btn-accept-modal, .btn-card-accept
     width: 25%
     background-color: $--color-main-blue
     border-radius: 5px
@@ -285,7 +293,7 @@ input
 .search-btn>img
     width: 18px
     height: 18px
-.htop
+.htop-remove
     top: 0
 .htop-add
     top: 0
