feat : pop-up-menu view class 생성 및 이벤트 등록
- pop-up-menu의 view class 생성 및 이벤트 등록

--- a/public/stylesheet/style.sass
+++ b/public/stylesheet/style.sass
@@ -28,6 +28,7 @@ $menu-pop-up-width:300px
     width: $menu-pop-up-width
     border: 1px $common-border-color solid
     transform: translateX($menu-pop-up-width)
+    transition-duration: 0.5s
 .pop-up
     z-index: 1
     position: fixed
