--- a/public/stylesheet/style.sass
+++ b/public/stylesheet/style.sass
@@ -8,6 +8,12 @@ $cancel-button-background:#000000bd
 $pop-up-background:#000000
 $pop-up-content:#ffffff
 $menu-pop-up-width:300px
+$menu-background:#ffffff
+
+ul,li
+    padding: 0
+    margin: 0
+    list-style: none
 
 .header
     font-size: 40px
@@ -21,6 +27,7 @@ $menu-pop-up-width:300px
         cursor: pointer
 
 .menu-pop-up
+    box-sizing: border-box
     position: fixed
     z-index: 1
     right: 0
@@ -29,6 +36,25 @@ $menu-pop-up-width:300px
     border: 1px $common-border-color solid
     transform: translateX($menu-pop-up-width)
     transition-duration: 0.5s
+    background: $menu-background
+    &__header
+        box-sizing: border-box
+        width: 100%
+        padding: 10px
+        border: 1px $common-border-color solid
+        display: flex
+        justify-content: space-between
+    &__close-button
+        cursor: pointer
+.menu-detail
+    box-sizing: border-box
+    &__header
+        padding: 10px
+    &__item
+        box-sizing: border-box
+        border: 1px $common-border-color solid
+        padding: 10px
+
 .pop-up
     z-index: 1
     position: fixed
