--- a/client/index.css
+++ b/client/index.css
@@ -21,7 +21,16 @@ header{
     width: 350px;
     right: 0;
     top: 0;
+    z-index:1;
     height: 100%;
+    box-sizing: border-box;
+    transform: translateX(350px);
+    transition: .2s ease-in transform;
+}
+
+.side-menu.active {
+    transform: translateX(0px);
+    transition: .2s ease-out transform;
 }
 
 .side-menu > .side-menu__header{
@@ -39,6 +48,7 @@ header{
     font-size: 16px;
     padding: 13px;
     border-bottom: 1px solid lightgray;
+
 }
 
 .side-menu > ul {
@@ -202,6 +212,7 @@ header{
     width: 100%;
     height: 100%;
     top: 0;
+    z-index: 2;
 }
 
 .modal{
@@ -210,6 +221,7 @@ header{
     right: calc(50% - 250px);
     background-color: white;
     width: 500px;
+    z-index: 2;
 }
 
 .modal-header{   
