--- a/public/stylesheet/style.sass
+++ b/public/stylesheet/style.sass
@@ -7,7 +7,7 @@ $add-button-background: #fef01b
 $cancel-button-background: #000000bd
 $pop-up-background: #000000
 $pop-up-content: #ffffff
-$menu-pop-up-width: 300px
+$menu-pop-up-width: 400px
 $menu-background: #ffffff
 
 ul,li
@@ -46,21 +46,27 @@ ul,li
         justify-content: space-between
     &__close-button
         cursor: pointer
+
 .menu-detail
     box-sizing: border-box
     &__header
         padding: 10px
     &__item
         box-sizing: border-box
-        border: 1px $common-border-color solid
         padding: 10px
+        display: flex
 
+.activity-content
+    margin-left: 25px
+.user-image
+    width: 60px
+    height: 60px
+    border-radius: 10px
 .balloon
     box-sizing: border-box
     position: relative
     width: 250px
     height: 50px
-    margin-left: 25px
     background: $add-button-background
     border-radius: 10px
     padding: 15px
