refactoring: scss deduplication

--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -1,3 +1,32 @@
+$container-color : #cecece;
+
+%activity-layout {
+  position: fixed;
+  width: 450px;
+  height: 100%;
+  background-color: #fafafa;
+  z-index: 1;
+  border: 1px solid #b4b4b4;
+  overflow:scroll;
+  -webkit-animation-duration: 1.5s;
+}
+
+%header {
+  float: left;
+  color: #ffffff;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+%input-btn {
+  width:206px;
+  height: 45px;
+  font-size: large;
+  font-weight: 700;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
 .display { 
   display: block;
 }
@@ -11,23 +40,15 @@
   height: 60px;
   margin: -8px;
   background-color: #000000;
-}
-
-.navbar-title {
-  float: left;
-  color: #ffffff;
-  font-size: 30px;
-  font-weight: bold;
-  padding: 13px 0px 0px 80px;
-}
-
-.navbar-menu {
-  float: left;
-  color: #ffffff;
-  font-size: 30px;
-  font-weight: bold;
-  padding: 13px 0px 0px 1400px;
-  cursor: pointer;
+  .navbar-title {
+    @extend %header;
+    padding: 13px 0px 0px 80px;
+  }
+  .navbar-menu {
+    @extend %header;
+    padding: 13px 0px 0px 1400px;
+    cursor: pointer;
+  }
 }
 
 .filter-contatiner {
@@ -66,7 +87,7 @@
   width: 390px;
   margin-top: 10px;
   padding: 13px 0 0 30px;
-  border: 1px solid #cecece;
+  border: 1px solid $container-color;
   border-radius: 5px;
   background-color: #fafafa;
   color: #424242;
@@ -150,40 +171,23 @@
 }
 
 .add-button {
-  width:206px;
-  height: 45px;
+  @extend %input-btn;
   margin-top: 10px;
-  font-size: large;
-  font-weight: 700;
   color: #ebebeb;
   border: 1px solid #4da160;
-  border-radius: 5px;;
   background-color: #4ebb66;
-  cursor: pointer;
 }
 
 .cancel-button {
-  width:206px;
-  height: 45px;
+  @extend %input-btn;
   margin: 6px 0 0 5px;
-  font-size: large;
-  font-weight: 700;
   color: #424242;
   border: 1px solid #b4b4b4;
-  border-radius: 5px;
-  cursor: pointer;
 }
 
 .activity-in {
-  position: fixed;
+  @extend %activity-layout;
   margin-left: 1342px;
-  width: 450px;
-  height: 100%;
-  background-color: #fafafa;
-  z-index: 1;
-  border: 1px solid #b4b4b4;
-  overflow:scroll;
-  -webkit-animation-duration: 1.5s;
   -webkit-animation-name: slidein;
 }
 
@@ -199,27 +203,19 @@
 }
 
 .activity-out {
-  position: fixed;
+  @extend %activity-layout;
   margin-left: 1800px;
-  width: 450px;
-  height: 100%;
-  background-color: #fafafa;
-  z-index: 1;
-  border: 1px solid #b4b4b4;
-  overflow:scroll;
-  -webkit-animation-duration: 1.5s;
   -webkit-animation-name: slideout;
 }
 
 @-webkit-keyframes slideout {
   from {
     margin-left: 1392px;
-    width:400px;
+    width:450px;
   }
   to {
     margin-left: 1800px;
-    width: 400px;
-
+    width: 450px;
   }
 }
 
@@ -229,22 +225,20 @@
   height: 26px;
   font-weight: 600;
   background-color: #dee3e9;
-  border-bottom: 1px solid #cecece;
-}
-
-.activity-close {
-  margin-left: 360px;
+  border-bottom: 1px solid $container-color;
+  .activity-close {
+  margin-left: 350px;
   cursor: pointer;
-}
-
-.activity-clear {
-  margin-left: 328px;
-  cursor: pointer;
+  }
+  .activity-clear {
+    margin-left: 328px;
+    cursor: pointer;
+  }
 }
 
 .activity-item {
   width: 100%;
-  border-bottom: 1px solid #cecece;
+  border-bottom: 1px solid $container-color;
 }
 
 .item-title {
