side menuBar 레이아웃 구성 우측 메뉴바의 레이아웃과 css를 정의하였습니다.

--- a/client/stylesheets/todo.sass
+++ b/client/stylesheets/todo.sass
@@ -21,6 +21,46 @@ input
     line-height: 50px
     z-index: 200
 
+.menu-wrapper
+    z-index: 230
+    position: fixed
+    right: 0
+    width: 370px
+    height: 100%
+    background-color: #ffffff
+    box-shadow: 0 0 5px $--color-main-gray
+
+.menu
+    background-color: $--color-main-bg
+    border-bottom: 1px solid $--color-main-gray
+    height: 27px
+    padding: 10px
+    line-height: 27px
+    font-size: 18px
+    font-weight: 700
+
+.menu-item
+    padding: 15px
+    font-size: 14px
+    border-bottom: 1px solid $--color-main-gray
+
+.relative
+    position: relative
+
+.profile
+    position: fixed
+    width: 35px
+    height: 35px
+    border-radius: 5px
+
+.menu-text
+    padding-left: 45px
+    padding-bottom: 3px
+
+.history
+    font-size: 16px
+    font-weight: 600
+
 .modal
   position: fixed
   z-index: 1
