--- a/client/stylesheets/todo.css
+++ b/client/stylesheets/todo.css
@@ -17,6 +17,54 @@ input {
   z-index: 200;
 }
 
+.menu-wrapper {
+  z-index: 230;
+  position: fixed;
+  right: 0;
+  width: 370px;
+  height: 100%;
+  background-color: #ffffff;
+  -webkit-box-shadow: 0 0 5px #dddee2;
+          box-shadow: 0 0 5px #dddee2;
+}
+
+.menu {
+  background-color: #f6f8fa;
+  border-bottom: 1px solid #dddee2;
+  height: 27px;
+  padding: 10px;
+  line-height: 27px;
+  font-size: 18px;
+  font-weight: 700;
+}
+
+.menu-item {
+  padding: 15px;
+  font-size: 14px;
+  border-bottom: 1px solid #dddee2;
+}
+
+.relative {
+  position: relative;
+}
+
+.profile {
+  position: fixed;
+  width: 35px;
+  height: 35px;
+  border-radius: 5px;
+}
+
+.menu-text {
+  padding-left: 45px;
+  padding-bottom: 3px;
+}
+
+.history {
+  font-size: 16px;
+  font-weight: 600;
+}
+
 .modal {
   position: fixed;
   z-index: 1;
