MenuView에 필요한 매직 넘버 별도 관리 MenuView를 init할 때 매직 넘버를 같이 넘겨서 별도로 관리할 수 있게 하였고, 타입스크립트를 정의하였습니다.

--- a/client/stylesheets/todo.css
+++ b/client/stylesheets/todo.css
@@ -28,6 +28,10 @@ input {
           box-shadow: 0 0 5px #dddee2;
 }
 
+#menuBtn {
+  cursor: pointer;
+}
+
 .menu {
   background-color: #f6f8fa;
   border-bottom: 1px solid #dddee2;
@@ -42,6 +46,11 @@ input {
   padding: 15px;
   font-size: 14px;
   border-bottom: 1px solid #dddee2;
+}
+
+.menu-close {
+  font-size: 20px;
+  cursor: pointer;
 }
 
 .relative {
