--- a/client/stylesheets/todo.sass
+++ b/client/stylesheets/todo.sass
@@ -30,6 +30,9 @@ input
     background-color: #ffffff
     box-shadow: 0 0 5px $--color-main-gray
 
+#menuBtn
+    cursor: pointer
+
 .menu
     background-color: $--color-main-bg
     border-bottom: 1px solid $--color-main-gray
@@ -43,6 +46,10 @@ input
     padding: 15px
     font-size: 14px
     border-bottom: 1px solid $--color-main-gray
+
+.menu-close
+    font-size: 20px
+    cursor: pointer
 
 .relative
     position: relative
