style : text가 긁혀서 제대로 작동 안하는 문제 해결
- user-select:none으로 해서 드래그 앤 드롭에 방해되는 문제 해결

--- a/public/stylesheet/style.sass
+++ b/public/stylesheet/style.sass
@@ -75,7 +75,7 @@ ul,li
 .balloon
     box-sizing: border-box
     position: relative
-    width: 250px
+    width: 280px
     height: 50px
     background: $add-button-background
     border-radius: 10px
@@ -92,7 +92,7 @@ ul,li
     .user-activity, .from, .card, .to
         color: #0000ff
         font-weight: bolder
-        font-size: 20px
+        font-size: 15px
 .pop-up
     z-index: 1
     position: fixed
@@ -172,6 +172,7 @@ ul,li
     padding: 10px
 
 .todo-list
+    user-select: none
     display: flex
     margin-top: 10px
     column-gap: 20px
@@ -215,6 +216,7 @@ ul,li
     padding: 20px
     margin-bottom: 10px
     border: 1px solid $common-border-color
+
     &--delete-button
         position: absolute
         top: 10px
