--- a/public/stylesheet/style.sass
+++ b/public/stylesheet/style.sass
@@ -76,7 +76,7 @@ ul,li
     box-sizing: border-box
     position: relative
     width: 280px
-    height: 50px
+    min-height: 50px
     background: $add-button-background
     border-radius: 10px
     padding: 15px
