--- a/client/stylesheets/todo.sass
+++ b/client/stylesheets/todo.sass
@@ -29,6 +29,8 @@ input
     height: 100%
     background-color: #ffffff
     box-shadow: 0 0 5px $--color-main-gray
+    overflow-y: scroll
+    transform: translate(370px, 0)
 
 #menuBtn
     cursor: pointer
@@ -51,6 +53,10 @@ input
     font-size: 20px
     cursor: pointer
 
+.menu-accent
+    color: $--color-main-blue
+    font-weight: 700
+
 .relative
     position: relative
 
@@ -65,7 +71,7 @@ input
     padding-bottom: 3px
 
 .history
-    font-size: 16px
+    font-size: 15px
     font-weight: 600
 
 .modal
