--- a/client/stylesheets/todo.css
+++ b/client/stylesheets/todo.css
@@ -101,7 +101,7 @@ input {
   border-radius: 10px 10px 0 0;
 }
 
-.modal-header-title {
+.modal-edit-header-title, .modal-new-header-title {
   color: white;
   font-size: 25px;
   font-weight: 700;
@@ -125,7 +125,7 @@ input {
   text-align: center;
 }
 
-.modal-edit {
+.modal-edit, .modal-new-card {
   background-color: #fefefe;
   margin: auto;
   border-radius: 10px;
@@ -144,7 +144,7 @@ input {
   padding: 1em;
 }
 
-.modal-input {
+.modal-input, .modal-new-input {
   width: 90%;
   min-height: 100px;
   border-radius: 5px;
@@ -154,7 +154,7 @@ input {
   font-size: 18px;
 }
 
-.btn-edit-close-modal {
+.btn-edit-close-modal, .btn-new-close-modal {
   float: right;
   color: white;
   font-size: 35px;
