--- a/client/stylesheets/todo.sass
+++ b/client/stylesheets/todo.sass
@@ -91,7 +91,7 @@ input
     padding: 20px
     border-radius: 10px 10px 0 0
 
-.modal-header-title
+.modal-edit-header-title, .modal-new-header-title
     color: white
     font-size: 25px
     font-weight: 700
@@ -112,7 +112,7 @@ input
     width: 20%
     text-align: center
 
-.modal-edit
+.modal-edit, .modal-new-card 
     background-color: #fefefe
     margin: auto
     border-radius: 10px
@@ -128,7 +128,7 @@ input
 .modal-save-wrapper
     padding: 1em
 
-.modal-input
+.modal-input, .modal-new-input
     width: 90%
     min-height: 100px
     border-radius: 5px
@@ -137,7 +137,7 @@ input
     border: 1px solid $--color-main-gray
     font-size: 18px
 
-.btn-edit-close-modal
+.btn-edit-close-modal, .btn-new-close-modal
     float: right
     color: white
     font-size: 35px
