feature : 사용자 액션 기록을 보여 주는 기능 사용자의 추가/수정/삭제에 따른 기록을 시간별로 보여 주는 기능을 구현하였습니다.

--- a/client/stylesheets/todo.css
+++ b/client/stylesheets/todo.css
@@ -77,6 +77,10 @@ input {
   padding-bottom: 3px;
 }
 
+.time {
+  color: gray;
+}
+
 .history {
   font-size: 15px;
   font-weight: 600;
@@ -144,7 +148,7 @@ input {
   padding: 1em;
 }
 
-.modal-input, .modal-new-input {
+.modal-new-input, .modal-edit-input {
   width: 90%;
   min-height: 100px;
   border-radius: 5px;
@@ -164,7 +168,7 @@ input {
   color: yellow;
 }
 
-.btn-save-modal {
+.btn-save-modal, .btn-save-note-modal {
   width: 170px;
   float: left;
   background-color: #34B370;
