--- a/client/stylesheets/todo.sass
+++ b/client/stylesheets/todo.sass
@@ -70,6 +70,9 @@ input
     padding-left: 45px
     padding-bottom: 3px
 
+.time
+    color: gray
+
 .history
     font-size: 15px
     font-weight: 600
@@ -128,7 +131,7 @@ input
 .modal-save-wrapper
     padding: 1em
 
-.modal-input, .modal-new-input
+.modal-new-input, .modal-edit-input
     width: 90%
     min-height: 100px
     border-radius: 5px
@@ -145,7 +148,7 @@ input
 .btn-edit-close-modal:hover
     color: yellow
 
-.btn-save-modal
+.btn-save-modal, .btn-save-note-modal
     width: 170px
     float: left
     background-color: $--color-main-green
