--- a/client/stylesheets/todo.css
+++ b/client/stylesheets/todo.css
@@ -7,6 +7,13 @@ input {
   margin-left: 1em;
 }
 
+#root {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
 #header {
   width: 100%;
   height: 50px;
@@ -61,6 +68,11 @@ input {
   font-weight: 700;
 }
 
+.red {
+  color: #F3758A;
+  font-weight: 700;
+}
+
 .relative {
   position: relative;
 }
@@ -82,7 +94,7 @@ input {
 }
 
 .history {
-  font-size: 15px;
+  font-size: 13.5px;
   font-weight: 600;
 }
 
@@ -375,6 +387,7 @@ input {
   -webkit-box-shadow: 0px 1px 2px lightgray;
           box-shadow: 0px 1px 2px lightgray;
   width: 320px;
+  border-left: 3px solid #71B3EE;
 }
 
 .list-view:hover {
