--- a/client/stylesheets/todo.sass
+++ b/client/stylesheets/todo.sass
@@ -55,6 +55,13 @@ input
     font-size: 14px
     border-bottom: 1px solid $--color-main-gray
 
+.menu-history-remove
+    font-size: 13px
+    padding: 5px
+    font-weight: 600
+    border-radius: 7px
+    background-color: $--color-main-gray
+
 .menu-close
     font-size: 20px
     cursor: pointer
