feat : 로그 데이터를 시작할 때 DB에서 가져와서 렌더링
- 로그 데이터를 시작할 때 DB에서 가져와서 렌더링

--- a/public/stylesheet/style.sass
+++ b/public/stylesheet/style.sass
@@ -56,6 +56,7 @@ ul,li
         border-radius: 11px
 
 .menu-detail
+    overflow-y: scroll
     height: 100%
     box-sizing: border-box
     &__header
