Add side bar rendering in detail
사이드바 리스트아이템들의 렌더링을 추가합니다.
추가한 시간순으로 정렬하여 보여주고, 추가한 시간부터 현재 시간까지 지난 시간을 함께 표시합니다.

--- a/sass/sideBar.scss
+++ b/sass/sideBar.scss
@@ -6,17 +6,31 @@
     z-index: 1000;
     left:100%;
     background-color: white;
+    overflow:scroll;
     #title{
         padding : 10px;
-        background-color: white;
+        background-color: rgb(243,243,243);
     }
     #sub{
         padding : 10px;
-        background-color: white;
+        background-color: rgb(243,243,243);
+        border:0.5px solid lightgray;
     }
     #close-btn{
         position:absolute;
         right:10px;
+    }
+    .side-item{
+        padding:5px 5px 5px 5px;
+        border-bottom:0.5px solid lightgray;
+        border-left:0.5px solid lightgray;
+        border-right:0.5px solid lightgray;
+    }
+    .blue{
+        color:blue;
+    }
+    .bold{
+        font-weight:bold;
     }
 }
 .sb-close{
