--- a/public/css/container.css
+++ b/public/css/container.css
@@ -1,7 +1,6 @@
 #kanban {
   background-color: white;
-  display: flex;
-  width: 100%;
+  width: 200%;
   height: 100%;
   justify-content: space-around;
 }
@@ -13,10 +12,11 @@
 }
 #kanban .section {
   position: relative;
+  display: inline-block;
   font-size: 16px;
   background-color: #f3f3f3;
   height: 700px;
-  width: 32%;
+  width: 290px;
   border-radius: 20px;
   padding: 10px;
   margin: 0px 3px 0px 3px;
