--- a/public/css/sideBar.css
+++ b/public/css/sideBar.css
@@ -6,18 +6,32 @@
   z-index: 1000;
   left: 100%;
   background-color: white;
+  overflow: scroll;
 }
 #side-bar #title {
   padding: 10px;
-  background-color: white;
+  background-color: #f3f3f3;
 }
 #side-bar #sub {
   padding: 10px;
-  background-color: white;
+  background-color: #f3f3f3;
+  border: 0.5px solid lightgray;
 }
 #side-bar #close-btn {
   position: absolute;
   right: 10px;
+}
+#side-bar .side-item {
+  padding: 5px 5px 5px 5px;
+  border-bottom: 0.5px solid lightgray;
+  border-left: 0.5px solid lightgray;
+  border-right: 0.5px solid lightgray;
+}
+#side-bar .blue {
+  color: blue;
+}
+#side-bar .bold {
+  font-weight: bold;
 }
 
 .sb-close {
