--- a/public/css/container.css
+++ b/public/css/container.css
@@ -10,6 +10,16 @@
 #kanban .show {
   display: block;
 }
+#kanban #append-section {
+  display: inline-block;
+  height: 400px;
+  width: 290px;
+  border: 1px dotted;
+  border-radius: 10px;
+  margin: 0px 3px 0px 3px;
+  padding: 10px;
+  text-align: center;
+}
 #kanban .section {
   position: relative;
   display: inline-block;
@@ -17,7 +27,7 @@
   background-color: #f3f3f3;
   height: 700px;
   width: 290px;
-  border-radius: 20px;
+  border-radius: 10px;
   padding: 10px;
   margin: 0px 3px 0px 3px;
 }
