--- a/sass/container.scss
+++ b/sass/container.scss
@@ -8,6 +8,16 @@
     }.show{
         display:block;
     }
+    #append-section{
+        display: inline-block;
+        height: 400px;
+        width: 290px;
+        border: 1px dotted ;
+        border-radius: 10px;
+        margin:0px 3px 0px 3px;
+        padding : 10px;
+        text-align: center;
+    }
     .section{
         position:relative;
         display: inline-block;
@@ -15,7 +25,7 @@
         background-color: rgb(243,243,243);
         height: 700px;
         width: 290px;
-        border-radius: 20px;
+        border-radius: 10px;
         padding : 10px;
         margin:0px 3px 0px 3px;
         .open-panel-btn{
