--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -100,6 +100,7 @@ $container-color : #cecece;
   background-color: #fafafa;
   color: #424242;
   font-weight: 500;
+  z-index: 1;
 }
 
 .card-title {
@@ -351,4 +352,5 @@ $container-color : #cecece;
 
 .add-container:hover {
   background-color: #b1b1b1;
+  color: #f5f5f5;
 }
