--- a/client/stylesheets/todo.sass
+++ b/client/stylesheets/todo.sass
@@ -339,11 +339,13 @@ input
 
 .list-view:hover
     border: 1px solid #0366d6
+    border-left: 3px solid $--color-main-blue
     box-shadow: 0 0 0 3px $--color-focus-shadow
     background-color: $--color-soft-blue
 
 .list-view:focus-within
     border: 1px solid #0366d6
+    border-left: 3px solid $--color-main-blue
     box-shadow: 0 0 0 3px $--color-focus-shadow
     background-color: $--color-soft-blue  
 
