feature : Add user-action historyBar, add move action 유저 히스토리 메뉴바 관련 버그 모두 수정, 드래그 앤 드롭으로 움직인 노트도 DB에 반영 및 move action 추가

--- a/client/stylesheets/todo.css
+++ b/client/stylesheets/todo.css
@@ -28,14 +28,14 @@ input {
   z-index: 230;
   position: fixed;
   right: 0;
-  width: 370px;
+  width: 400px;
   height: 100%;
   background-color: #ffffff;
   -webkit-box-shadow: 0 0 5px #dddee2;
           box-shadow: 0 0 5px #dddee2;
   overflow-y: scroll;
-  -webkit-transform: translate(370px, 0);
-          transform: translate(370px, 0);
+  -webkit-transform: translate(400px, 0);
+          transform: translate(400px, 0);
 }
 
 #menuBtn {
@@ -95,6 +95,8 @@ input {
 .menu-text {
   padding-left: 45px;
   padding-bottom: 3px;
+  letter-spacing: -0.02em;
+  line-height: 1.5em;
 }
 
 .time {
@@ -454,8 +456,38 @@ input {
   right: 25px;
 }
 
+.list-edit {
+  right: 25px;
+  top: 5px;
+}
+
 .none {
   display: none;
+}
+
+.alt {
+  border-radius: 5px;
+  padding: 3px;
+  font-size: 12.5px;
+  margin-right: 3px;
+  margin-bottom: 3px;
+  font-weight: 600;
+}
+
+.alt-remove {
+  background-color: #e7e2e2;
+}
+
+.alt-add {
+  background-color: #bbe0f8;
+}
+
+.alt-edit {
+  background-color: #ebd1fa;
+}
+
+.alt-move {
+  background-color: #d1f1dd;
 }
 
 /*   *******   */
