--- a/client/stylesheets/todo.sass
+++ b/client/stylesheets/todo.sass
@@ -32,12 +32,12 @@ input
     z-index: 230
     position: fixed
     right: 0
-    width: 370px
+    width: 400px
     height: 100%
     background-color: #ffffff
     box-shadow: 0 0 5px $--color-main-gray
     overflow-y: scroll
-    transform: translate(370px, 0)
+    transform: translate(400px, 0)
 
 #menuBtn
     cursor: pointer
@@ -87,6 +87,8 @@ input
 .menu-text
     padding-left: 45px
     padding-bottom: 3px
+    letter-spacing: -0.02em
+    line-height: 1.5em
 
 .time
     color: gray
@@ -373,11 +375,30 @@ input
 .search-btn>img
     width: 18px
     height: 18px
-.htop-add
+.htop-add,
     right: 25px   
-
+.list-edit
+    right: 25px
+    top: 5px
 .none
     display: none
+
+.alt
+    border-radius: 5px
+    padding: 3px
+    font-size: 12.5px
+    margin-right: 3px
+    margin-bottom: 3px
+    font-weight: 600
+
+.alt-remove
+    background-color: #e7e2e2
+.alt-add
+    background-color: #bbe0f8
+.alt-edit
+    background-color: #ebd1fa
+.alt-move
+    background-color: #d1f1dd
 
 /*   *******   */
 $i: 1
