--- a/public/css/container.css
+++ b/public/css/container.css
@@ -1,8 +1,9 @@
 #kanban {
+  display: inline-block;
   background-color: white;
-  width: 200%;
+  text-align: left;
+  width: 500%;
   height: 100%;
-  justify-content: space-around;
 }
 #kanban .hide {
   display: none;
